[workspace]
resolver = "2"
members = ["cloudflare-adapter"]

[workspace.dependencies]
# Luke's moq-lite libraries (pinned to same commit as submodule: fe72aeb)
moq-lite = { git = "https://github.com/moq-dev/moq", rev = "fe72aeb", package = "moq-lite" }
moq-native = { git = "https://github.com/moq-dev/moq", rev = "fe72aeb", package = "moq-native" }

# Common dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
url = "2"
